[fix]: Layout break on smartphones

--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -34,11 +34,17 @@
 	color: honeydew;
 }
 
+.markdown pre {
+	word-break: break-all;
+	white-space: pre-wrap;
+}
+
 .markdown code {
 	background-color: #000000;
 	padding: 0.2rem;
 	border-radius: 5px;
 	color: #0f7;
+	text-align: justify;
 }
 
 .markdown h2 {
@@ -51,4 +57,10 @@
 
 .markdown h3 {
 	@apply text-2xl mt-8 mb-4 leading-snug;
+}
+
+@media only screen and (max-width: 700px) {
+	.markdown code {
+		font-size: 14px;
+	}
 }
